[package]
name = "moblink-rust"
version = "0.6.0"
edition = "2021"
description = "Use spare devices as extra SRTLA bonding connections"
license = "MIT"

# This defines the library
[lib]
name = "moblink_rust"
path = "src/lib.rs"

[[bin]]
name = "moblink-rust-relay"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.24", features = ["derive"] }
futures-util = "0.3.31"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
url = "2.5.4"
log = "0.4"
env_logger = "0.11"
anstyle = "1.0.10"
uuid = { version = "1.11", features = ["v4"] }
pnet = "0.35.0"
socket2 = "0.5.8"
mdns-sd = "0.13.1"

pnet = { version = "0.35.0", default-features = false }
socket2 = { version = "0.5.8", default-features = false, features = ["all"] }

# Force compatible versions globally
[patch.crates-io]
libc = "0.2.169"  # Working version
getrandom = { version = "0.2.15", features = ["js"] }  # Use JS fallback
rand = { version = "0.8.5", default-features = false }  # Match working build
rand_core = "0.6.4"  # Exact version from working build
