[package]
name = "moblink-rust"
version = "0.6.0"
edition = "2021"
description = "Use spare devices as extra SRTLA bonding connections"
license = "MIT"

# This defines the library
[lib]
name = "moblink_rust"
path = "src/lib.rs"

[[bin]]
name = "moblink-rust-relay"
path = "src/bin/relay.rs"

[[bin]]
name = "moblink-rust-streamer"
path = "src/bin/streamer.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.24", features = ["derive"] }
futures-util = "0.3.31"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
url = "2.5.4"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
pnet = "0.35.0"
socket2 = "0.5.8"
mdns-sd = "0.13.1"
rand = "0.9.0"
tun = {version = "0.7.17", features = ["async"] }
packet = "0.1.4"
tokio-util = "0.7.14"
ipnetwork = "0.21.1"
gethostname = "1.0.1"
