[package]
name = "moblink-rust"
version = "0.7.0"
edition = "2024"
description = "Use spare devices as extra SRTLA bonding connections"
license = "MIT"
homepage = "https://github.com/datagutt/moblink-rust"
repository = "https://github.com/datagutt/moblink-rust"

# This defines the library
[lib]
name = "moblink_rust"
path = "src/lib.rs"

[[bin]]
name = "moblink-relay"
path = "src/bin/relay.rs"

[[bin]]
name = "moblink-relay-service"
path = "src/bin/relay_service.rs"

[[bin]]
name = "moblink-streamer"
path = "src/bin/streamer.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.24", features = ["derive"] }
futures-util = "0.3.31"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
url = "2.5.4"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
pnet = "0.35.0"
socket2 = "0.5.8"
mdns-sd = "0.13.5"
rand = "0.9.0"
tun = { version = "0.7.17", features = ["async"] }
packet = "0.1.4"
tokio-util = "0.7.14"
ipnetwork = "0.21.1"
gethostname = "1.0.1"
network-interface = "2.0.1"
notify = "8.0.0"
